# file-manage-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_application_tables.py  0002_add_error_recovery_tables.py
app/: __init__.py
app/agents/: __init__.py  content.py  evidence.py  protocol.py  registry.py  version.py
app/entrypoints/: __init__.py  cli.py
app/graphs/: __init__.py  content_subagent.py  context_compact.py  error_recovery.py  evidence.py  evidence_subagent.py  file_governance.py  inventory.py  recommendation.py  routers.py  team_orchestration.py  version_analysis.py  version_subagent.py
app/hooks/: __init__.py  builtin.py  registry.py  runner.py
app/llm/: __init__.py  client.py  config.py  model_profiles.py  prompt_loader.py  schemas.py
app/nodes/: __init__.py  context_compact.py  error_recovery.py  evidence.py  inventory.py  lifecycle.py  memory.py  recommendation.py  report.py  review.py  skills.py  subagents.py  subgraphs_nodes.py  task_tracking.py  team_orchestration.py  version_analysis.py
app/services/: __init__.py  content_normalizer.py  context_compaction.py  document_grouping.py  evidence_matching.py  inventory_execution.py  memory_policy.py  recommendation.py  recovery_execution.py  recovery_policy.py  reporting.py  task_system.py  version_graph.py
app/skills/: __init__.py  loader.py  registry.py  selector.py
app/state/: __init__.py  converters.py  factories.py  model.py  models.py  reducers.py
app/storage/: __init__.py  artifacts.py  checkpoints.py  database.py  memory_repository.py  orm_models.py  repositories.py
app/tools/: __init__.py  delivery_log.py  document_parsers.py  file_scanner.py
app/utils/: __init__.py  error_context.py  evidence.py  lifecycle.py  runtime.py  state_lookup.py  task_orchestration.py  task_tracking.py  token_estimation.py
configs/: default.yaml
docs/: release-0.4.0-task-orchestration.md  release-0.5.0-agent-team.md  release-0.6.0-skills-memory-context.md  release-0.7.0-error-recovery.md  version-0.3-prompt-hooks.md  version-0.3.1-task-system.md  version-0.3.2-team-orchestration.md  version-0.3.3-task-progress.md  version-0.4-evidence.md  version-0.4.1-llm-foundation.md  version-0.4.2-fixed-subagents.md  version-0.4.3-team-dispatch.md  version-0.4.4-business-stage-integration.md  version-0.5.2-langchain-multi-model.md  version-0.5.4-memory.md  version-0.5.5-context-compact.md  version-0.6.1-recovery-state-policy.md  version-0.6.2-recovery-persistence.md  version-0.6.3-error-recovery-graph.md  version-0.6.4-existing-subgraph-integration.md  version-0.6.5-recovery-interrupt-report-cli.md
examples/: sample_delivery_log.json  sample_llm_request.json  sample_multi_model_request.json  sample_request.json  sample_task_progress.json
resources/prompts/: file_governance_system_v1.md
resources/skills/: registry.yaml
(+73 files in other folders)
