[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "file-manage-agent"
version = "0.4.0"
description = "基于 LangGraph 的只读文件版本治理 Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1,<4",
    "python-docx>=1.1,<2",
    "pypdf>=5,<7",
    "PyYAML>=6,<7",
    "langgraph>=1.2,<2",
    "langgraph-checkpoint-sqlite>=3.1,<4",
]

[project.scripts]
file-governance = "app.entrypoints.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.12,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.data-files]
"resources/prompts" = ["resources/prompts/file_governance_system_v1.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
