[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "file-manage-agent"
version = "0.6.5"
description = "支持恢复型人工确认、分类型 CLI 提示、部分成功报告及恢复与降级审计的 LangGraph 文件版本治理 Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1,<4",
    "python-docx>=1.1,<2",
    "pypdf>=5,<7",
    "PyYAML>=6,<7",
    "pydantic>=2.10,<3",
    "openai>=2.0,<3",
    "langchain>=1.1,<2",
    "langchain-openai>=1.0,<2",
    "langgraph>=1.2,<2",
    "langgraph-checkpoint-sqlite>=3.1,<4",
    "SQLAlchemy>=2.0,<3",
    "alembic>=1.15,<2",
]

[project.scripts]
file-governance = "app.entrypoints.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.12,<1",
]
anthropic = [
    "langchain-anthropic>=1.0,<2",
]
gemini = [
    "langchain-google-genai>=4.0,<5",
]
deepseek = [
    "langchain-deepseek>=1.0,<2",
]
qwen = [
    "langchain-qwq>=0.3,<1",
]
openrouter = [
    "langchain-openrouter>=0.2,<1",
]
litellm = [
    "langchain-litellm>=0.7,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.data-files]
"resources/prompts" = ["resources/prompts/file_governance_system_v1.md"]
"resources/skills" = ["resources/skills/registry.yaml"]
"resources/skills/file-content-analysis" = ["resources/skills/file-content-analysis/SKILL.md"]
"resources/skills/version-relation" = ["resources/skills/version-relation/SKILL.md"]
"resources/skills/evidence-confidence" = ["resources/skills/evidence-confidence/SKILL.md"]
"resources/skills/governance-report" = ["resources/skills/governance-report/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
